# AircraftConflictResolution

./: CMakeLists.txt  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  jsonic.ovpn  main.cpp  prj3.pro
DomainData/: DomainObject.h  domain_object.h
DomainData/Aircraft/: aircraft.cpp  aircraft.h
DomainData/Collection/: domain_objects_collection.cpp  domain_objects_collection.h
DomainData/ConflictManager/: conflict_manager.cpp  conflict_manager.h
DomainData/ConflictSolver/: conflict_solver.cpp  conflict_solver.h
DomainData/DomainObjectsCollection/: domain_objects_collection.cpp  domain_objects_collection.h
DomainData/Drawer/: drawer.cpp  drawer.h
Geometry/Point/: point.cpp  point.h
Geometry/Segment/: segment.cpp  segment.h
Geometry/Track/: track.cpp  track.h
Geometry/Vector/: vector.cpp  vector.h
Main/: main.cpp
Main/Runner/: runner.cpp  runner.h
Runner/: runner.cpp  runner.h
